# example-async-tokio-rayon-dashmap-pararel-worker-kafka

./: Cargo.toml  Makefile  README.md
crates/server/: Cargo.toml
crates/server/src/: api.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: abstract_trait.rs  database.rs  domain.rs  errors.rs  lib.rs  repository.rs  service.rs
crates/shared/src/kafka/: consumer.rs  producer.rs
