[workspace]
members = ["crates/server", "crates/shared"]
resolver = "3"


[workspace.dependencies]
shared = { path = "./crates/shared" }
async-trait = "0.1.88"
futures = "0.3.31"
rayon = "1.10.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
csv = "1.3.1"
axum = { version = "0.8.4", features = ["multipart"] }
rdkafka = { version = "0.38", features = ["tokio"] }
serde_json = "1.0.140"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
codegen-units = 256
incremental = true


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
