[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true
axum.workspace = true
async-trait.workspace = true
futures.workspace = true
rayon.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
uuid.workspace = true
dashmap.workspace = true
csv.workspace = true
